Correcting uncover behavior on ios.

--- a/src/scss/app/_image.scss
+++ b/src/scss/app/_image.scss
@@ -20,6 +20,12 @@
 
   &:before {
     position: relative;
+    height: auto;
+  }
+
+  > :nth-child(1n) {
+    margin: auto;
+    min-height: initial;
   }
 }
 
