--- a/src/scss/site/index.scss
+++ b/src/scss/site/index.scss
@@ -4,8 +4,6 @@
 
 //define
 body {
-  min-height: 100vh;
-  width: 100%;
   margin: 0;
   font-family: 'Lato', sans-serif;
 }
@@ -17,7 +15,9 @@ figure {
   }
 }
 
-.context {
+$figure-y-min: 50vmin;
+
+@mixin context {
   $area-basis: 25em;
   $line-basis: 24em;
   $item-area-basis: ($area-basis * 0.5);
@@ -28,15 +28,12 @@ figure {
   figcaption,
   aside {
     display: flex;
-  }
+    box-sizing: border-box;
 
-  nav,
-  figcaption,
-  aside {
     p {
       margin: 0;
       font-size: 1.125rem;
-      font-size: 1.25vmax;
+      //font-size: 1.25vmax;
       font-weight: 300;
       box-sizing: border-box;
       padding: 3ex 3em;
@@ -47,9 +44,9 @@ figure {
 }
 
 figure:nth-of-type(1) {
-  @include point-to-nine(100% 50vmin, 52% 25%, row, 5 6);
+  @include point-to-nine(100% $figure-y-min, 52% 25%, row, 5 6);
   @include point-to-nine_debug(52% 25%);
-  @include point-to-nine_image(url('//static.parade.condenast.com/wp-content/uploads/2014/02/03-09-14-Carl-Sagan-ftr.jpg'), 50vmin);
+  @include point-to-nine_image(url('//static.parade.condenast.com/wp-content/uploads/2014/02/03-09-14-Carl-Sagan-ftr.jpg'), $figure-y-min);
 
   figcaption {
     @include point-to-nine_slice(4);
@@ -59,49 +56,49 @@ figure:nth-of-type(1) {
     @include point-to-nine_slice(5);
   }
 
-  @extend .context;
+  @include context;
 
-  @media only screen and (max-width: 56em) {
+  @media only screen and (max-width: 40em) {
     @include point-to-nine_image--uncover;
   }
 }
 
 figure:nth-of-type(2) {
-  @include point-to-nine(100% 50vmin, 27% 25%, column, 9);
+  @include point-to-nine(100% $figure-y-min, 27% 25%, column, 9);
   @include point-to-nine_debug(27% 25%);
-  @include point-to-nine_image(url('//wineandbowties.com/wordpress/wp-content/uploads/2013/11/sagansagan.jpg'), 50vmin);
+  @include point-to-nine_image(url('//wineandbowties.com/wordpress/wp-content/uploads/2013/11/sagansagan.jpg'), $figure-y-min);
 
   figcaption {
     @include point-to-nine_slice(5);
   }
 
-  @extend .context;
+  @include context;
 
-  @media only screen and (max-width: 56em) {
+  @media only screen and (max-width: 40em) {
     @include point-to-nine_image--uncover;
   }
 }
 
 figure:nth-of-type(3) {
-  @include point-to-nine(100% 50vmin, 50% 70%, column, 1);
+  @include point-to-nine(100% $figure-y-min, 50% 70%, column, 1);
   @include point-to-nine_debug(50% 70%);
-  @include point-to-nine_image(url('//farm8.staticflickr.com/7270/6992065114_ce85fd20aa_b.jpg'), 50vmin);
+  @include point-to-nine_image(url('//farm8.staticflickr.com/7270/6992065114_ce85fd20aa_b.jpg'), $figure-y-min);
 
   figcaption {
     @include point-to-nine_slice(5);
   }
 
-  @extend .context;
+  @include context;
 
-  @media only screen and (max-width: 56em) {
+  @media only screen and (max-width: 40em) {
     @include point-to-nine_image--uncover;
   }
 }
 
 figure:nth-of-type(4) {
-  @include point-to-nine(100% 50vmin, 30% 30%, row, 7 6);
+  @include point-to-nine(100% $figure-y-min, 30% 30%, row, 7 6);
   @include point-to-nine_debug(30% 30%);
-  @include point-to-nine_image(url('//yuq.me/users/12/481/WJ5hxzK8NU.png'), 50vmin);
+  @include point-to-nine_image(url('//yuq.me/users/12/481/WJ5hxzK8NU.png'), $figure-y-min);
 
   figcaption {
     @include point-to-nine_slice(7);
@@ -111,9 +108,9 @@ figure:nth-of-type(4) {
     @include point-to-nine_slice(5);
   }
 
-  @extend .context;
+  @include context;
 
-  @media only screen and (max-width: 56em) {
+  @media only screen and (max-width: 40em) {
     @include point-to-nine_image--uncover;
   }
 }
